app/assets/stylesheets/style_guide.css.scss
/* ... */
.lesson-subject-list {
  margin-right: .75em;
  font-size: 1.1em;
}

.lesson-grade-list {
  padding-left: .75em;
  font-size: 1.1em;
}

.lesson-description-container {
  padding: 1em;
}

.lesson-subject-list, .lesson-pipe, .lesson-grade-list,  {
  display: inline;
  font-size: 1em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
}

.lesson-description {
  font-size: 1.1em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
}

.star-ranking {
  // vertical-align: text-baseline;
  text-align: left;
  margin-top: -33px;
  position: relative;
  width: 60px;
  top: -7px;
}

.icon-star {
  color: #b9bdbd;
  font-size: 1.5em;
  display: inline;
}

.ranking {
  display: inline-block;
  position: relative;
  top: 50%;
  align: left;
  transform: translateY(-25%);
  font-family: $headline-font;
  font-size: 1.2em;
  margin-left: .25em;
  color: #807d7f;
  letter-spacing: .1em;
}

.lesson-description {
  line-height: 1.4em;
}

/***************************************
          PAGE HEADLINE
***************************************/
.page-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: "Hind", sans-serif;
  font-weight: 400;
  color: #65a397;
  margin-bottom: 2em;
  margin-top: 1.5em;
}

.page-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.page-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;

}

.page-headline-rule-first {
  margin-bottom: 3em;
}

.page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 100;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px 5px 0 5px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      CREATE LESSON PAGE HEADLINE
***************************************/
.create-lesson-page-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: 1.5em;
  margin-top: 1.5em;
}

.create-lesson-page-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.create-lesson-page-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;

}

.create-lesson-page-headline-rule-first {
  margin-bottom: 3em;
}

.create-lesson-page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      LOG IN PAGE HEADLINE
***************************************/
.login-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: 1.55em;
  margin-top: 1.5em;
}

.login-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.login-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;
}

.login-headline-rule-first {
  margin-bottom: 3em;
}

.login-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      EDIT MY PROFILE PAGE HEADLINE
***************************************/
.edit-my-profile-page-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: 1.5em;
  margin-top: 1.5em;
}

.edit-my-profile-page-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.edit-my-profile-page-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;

}

.edit-my-profile-page-headline-rule-first {
  margin-bottom: 3em;
}

.edit-my-profile-page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}


/***************************************
          PAGE SUB HEADLINE
***************************************/
.page-sub-headline {
  text-align: center;
  font-size: 1.8em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
  margin-bottom: 1em;
}

/***************************************
             BODY TEXT
***************************************/
.body-text-container {
  width: 60%;
  max-width: 800px;
  margin: 1em auto 2em;
}

.body-text {
  font-size: 1.1em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
  line-height: 1.6em;
}
/* ... */

